exports[`1. Alert with no props should render a default component 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="alert">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content" />
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content" />
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`2. Dismissible Alert that includes actions section should render an alert component with a dismiss button 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={[Function]}
    title=""
    type="alert">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content">
                This is a test
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions">
            
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Dismiss"
              variant="secondary" />
          </div>
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content">
                This is a test
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions">
            
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Dismiss"
              variant="secondary" />
          </div>
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`3. Alert of type alert with text content should render an Alert component of type alert 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="alert">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content">
                This is an alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--alert"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconAlert
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Alert.
              </strong>
              <div
                className="terra-Alert-content">
                This is an alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`4. Alert of type error with text content should render an Alert component of type error 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="error">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--error"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconError
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Error.
              </strong>
              <div
                className="terra-Alert-content">
                This is an error.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--error"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconError
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Error.
              </strong>
              <div
                className="terra-Alert-content">
                This is an error.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`5. Alert of type warning with text content should render an Alert component of type warning 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="warning">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--warning"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconWarning
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Warning.
              </strong>
              <div
                className="terra-Alert-content">
                This is an warning.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--warning"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconWarning
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Warning.
              </strong>
              <div
                className="terra-Alert-content">
                This is an warning.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`6. Alert of type gap-checking with text content should render an Alert component of type gap-checking 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="gap_checking">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--gap-checking"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconRequired
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Required Action.
              </strong>
              <div
                className="terra-Alert-content">
                This is a gap-checking alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--gap-checking"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconRequired
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Required Action.
              </strong>
              <div
                className="terra-Alert-content">
                This is a gap-checking alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`7. Alert of type advisory with text content should render an Alert component of type advisory 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="advisory">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--advisory"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon" />
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Advisory.
              </strong>
              <div
                className="terra-Alert-content">
                This is an advisory alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--advisory"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon" />
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Advisory.
              </strong>
              <div
                className="terra-Alert-content">
                This is an advisory alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`8. Alert of type info with text content should render an Alert component of type info 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="info">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--info"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconInformation
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Information.
              </strong>
              <div
                className="terra-Alert-content">
                This is an information alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--info"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconInformation
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Information.
              </strong>
              <div
                className="terra-Alert-content">
                This is an information alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`9. Alert of type success with text content should render an Alert component of type success 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="success">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--success"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconSuccess
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Success.
              </strong>
              <div
                className="terra-Alert-content">
                This is a success alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--success"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconSuccess
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Success.
              </strong>
              <div
                className="terra-Alert-content">
                This is a success alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`10. Alert of type outside records with text content should render an Alert component of type confirmation 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="outside_records">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--outside-records"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconDiamond
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Outside Records.
              </strong>
              <div
                className="terra-Alert-content">
                This is an outside records alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--outside-records"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconDiamond
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Outside Records.
              </strong>
              <div
                className="terra-Alert-content">
                This is an outside records alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`11. Alert of type custom with custom title and text content should render an Alert component of type custom 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={
      <IconHelp
        height="1.3333rem"
        viewBox="0 0 48 48"
        width="1.3333rem"
        xmlns="http://www.w3.org/2000/svg" />
    }
    customStatusColor="orange"
    onDismiss={null}
    title="Help!"
    type="custom">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--custom"
          style={
            Object {
              "color": "orange",
            }
          }>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconHelp
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section terra-Alert-section--custom">
              <strong
                className="terra-Alert-title">
                Help!
              </strong>
              <div
                className="terra-Alert-content">
                This is a custom alert.
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--custom"
          style={
            Object {
              "color": "orange",
            }
          }>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconHelp
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section terra-Alert-section--custom">
              <strong
                className="terra-Alert-title">
                Help!
              </strong>
              <div
                className="terra-Alert-content">
                This is a custom alert.
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`12. Alert of type info with custom title and HTML content should render an Alert component of type info with custom title and HTML content 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={null}
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title="Gettysburg Address"
    type="info">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--info"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconInformation
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Gettysburg Address
              </strong>
              <div
                className="terra-Alert-content">
                <span>
                  Four score and seven years ago . . .
                </span>
              </div>
            </div>
          </div>
          
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--info"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconInformation
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Gettysburg Address
              </strong>
              <div
                className="terra-Alert-content">
                <span>
                  Four score and seven years ago . . .
                </span>
              </div>
            </div>
          </div>
          
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`13. Alert of type success with an action button text content should render an Alert component of type success with an action button 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={
      <Button
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isReversed={false}
        onClick={[Function]}
        size="medium"
        text="Action"
        variant="primary" />
    }
    customIcon={null}
    customStatusColor=""
    onDismiss={null}
    title=""
    type="success">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--success"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconSuccess
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Success.
              </strong>
              <div
                className="terra-Alert-content">
                This is a success alert.
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions">
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Action"
              variant="primary" />
            
          </div>
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--success"
          style={Object {}}>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconSuccess
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section">
              <strong
                className="terra-Alert-title">
                Success.
              </strong>
              <div
                className="terra-Alert-content">
                This is a success alert.
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions">
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Action"
              variant="primary" />
            
          </div>
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;

exports[`14. Dismissable Alert of type custom with action button, custom title and text content should render an Alert component of type custom with an action button 1`] = `
<IntlProvider
  locale="en-US"
  messages={
    Object {
      "Terra.alert.advisory": "Advisory.",
      "Terra.alert.alert": "Alert.",
      "Terra.alert.dismiss": "Dismiss",
      "Terra.alert.error": "Error.",
      "Terra.alert.gapChecking": "Required Action.",
      "Terra.alert.info": "Information.",
      "Terra.alert.outsideRecords": "Outside Records.",
      "Terra.alert.success": "Success.",
      "Terra.alert.warning": "Warning.",
    }
  }>
  <Alert
    alertAction={
      <Button
        isBlock={false}
        isCompact={false}
        isDisabled={false}
        isReversed={false}
        onClick={[Function]}
        size="medium"
        text="Action"
        variant="primary" />
    }
    customIcon={
      <IconHelp
        height="1.3333rem"
        viewBox="0 0 48 48"
        width="1.3333rem"
        xmlns="http://www.w3.org/2000/svg" />
    }
    customStatusColor="orange"
    onDismiss={[Function]}
    title="Help!"
    type="custom">
    <ResponsiveElement
      defaultElement={
        <div
          className="terra-Alert terra-Alert--narrow terra-Alert--custom"
          style={
            Object {
              "color": "orange",
            }
          }>
          <div
            className="terra-Alert-body terra-Alert-body-narrow">
            <div
              className="terra-Alert-icon">
              <IconHelp
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section terra-Alert-section--custom">
              <strong
                className="terra-Alert-title">
                Help!
              </strong>
              <div
                className="terra-Alert-content">
                This is a custom alert.
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions terra-Alert-actions--custom">
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Action"
              variant="primary" />
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Dismiss"
              variant="secondary" />
          </div>
        </div>
      }
      responsiveTo="parent"
      tiny={
        <div
          className="terra-Alert terra-Alert--wide terra-Alert--custom"
          style={
            Object {
              "color": "orange",
            }
          }>
          <div
            className="terra-Alert-body terra-Alert-body-wide">
            <div
              className="terra-Alert-icon">
              <IconHelp
                height="1.3333rem"
                viewBox="0 0 48 48"
                width="1.3333rem"
                xmlns="http://www.w3.org/2000/svg" />
            </div>
            <div
              className="terra-Alert-section terra-Alert-section--custom">
              <strong
                className="terra-Alert-title">
                Help!
              </strong>
              <div
                className="terra-Alert-content">
                This is a custom alert.
              </div>
            </div>
          </div>
          <div
            className="terra-Alert-actions terra-Alert-actions--custom">
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Action"
              variant="primary" />
            <Button
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isReversed={false}
              onClick={[Function]}
              size="medium"
              text="Dismiss"
              variant="secondary" />
          </div>
        </div>
      }>
      <div />
    </ResponsiveElement>
  </Alert>
</IntlProvider>
`;
